[package]
name = "comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
async-std = { version = "1.12", features = ["attributes", "unstable"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.53.2", features = ["async-std", "request-response", "cbor", "gossipsub", "mdns", "kad", "dns", "identify", "noise", "quic", "macros", "tcp", "yamux", "serde"] }
libp2p-quic = { version = "0.10.2", features = ["async-std"] }
#libp2p-identify = "0.44.1"
anyhow = "1.0.86"
bit-vec = { version = "0.8.0", features = ["serde"] }
